# sbto

./: .gitignore  MANIFEST.in  README.md  debug_collision_viz.py  find_lift.py  fit_collision_capsules.py  pixi.toml  pyproject.toml
examples/: g1_gait.py
sbto/: job.py  main.py
sbto/conf/: config.yaml
sbto/conf/data_processing/: default.yaml
sbto/conf/slurm/: cm4_tiny.yaml  default.yaml
sbto/conf/solver/: cem.yaml  cem_mom.yaml
sbto/conf/warm_start/: finetune.yaml  incremental.yaml  none.yaml
sbto/data/: aggregate.py  constants.py  load.py  organize.py  postprocess.py  save.py  utils.py
sbto/evaluation/: errors.py  load.py  opt_stats.py  plotting.py  success_rate.py
sbto/mj/: nlp_base.py  nlp_mj.py  solver_base.py
sbto/mj/solver/: cem.py  efficient_cem.py
sbto/models/chair/: chair_scaled_1.0.urdf
sbto/models/shelf/: shelf_GBR.xml
sbto/models/unitree_g1/: g1_mjx.xml  g1_mjx_23dof.xml  g1_mjx_23dof_hands.xml  g1_mjx_box_table.xml  g1_mjx_no_hands.xml  g1_mjx_with_dfq_hands.xml  scene_29dof.xml  scene_29dof_box_table.xml  scene_mjx.xml  scene_mjx_23dof.xml  scene_mjx_23dof_hands.xml  scene_mjx_23dof_no_hands_obj_floor.xml  (+3 more)
sbto/run/: optimize.py  perf.py  save.py
sbto/sim/: action_scaling.py  model_editor.py  randomize.py  scene_mj.py  sim_base.py  sim_mj_rollout.py
sbto/solvers/: cem.py  cem_mom.py  sampler.py  solver_base.py
sbto/tasks/: cost.py  task_base.py  task_mj.py  task_mj_ref.py
sbto/utils/: config.py  exp_manager.py  extract_ref.py  gait.py  hydra.py  plotting.py  randomize_state.py  viewer.py
scripts/: compute_stats.py
(+47 files in other folders)
