[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbto"
version = "0.0.1"
description = "Sampling-Based Trajectory Optimization framework."

readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "numpy>=2.3.3",
    "tqdm>=4.66",
    "mujoco>=3.3.7",
    "scipy>=1.16.2",
    "numba>=0.62.1",
    "pyyaml",
    "matplotlib",
    "opencv-python",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sbto*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true